remove bg z-index (causing mix-blend-mode bug in Chrome)
In Chrome, h1 name would effectively lose mix-blend-mode property when h1 position changed due to being pushed by other elements / viewport width reduced a lot. negative z-index of bg turned out to be the root cause for some reason. Removed from all css files just in case.

--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,6 @@ body {
   width: 100vw;
   height: 100vh;
   position: fixed;
-  z-index: -10;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
