--- a/css/resume.css
+++ b/css/resume.css
@@ -97,7 +97,6 @@ body {
   width: 100vw;
   height: 100vh;
   position: fixed;
-  z-index: -10;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
